--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
+    "redis": "^2.8.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@types/express": "^4.16.0",
     "@types/express-validator": "^3.0.0",
     "@types/node": "^10.11.7",
+    "@types/redis": "^2.8.11",
     "@types/request": "^2.47.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
